--- a/index.html
+++ b/index.html
@@ -1,65 +1,44 @@
-<!doctype html>
-<html lang="ja">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>今日の占い</title>
-<style>
-  body{margin:0;background:#0b0c10;color:#eef2f7;font-family:system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans JP", sans-serif;display:grid;place-items:center;min-height:100vh;padding:24px}
-  .wrap{width:min(920px,100%)}
-  .card{background:#15171b;border:1px solid rgba(255,255,255,.08);border-radius:20px;box-shadow:0 12px 40px rgba(0,0,0,.35);padding:20px}
-  h1{margin:0 0 8px;font-size:clamp(20px,3.6vw,32px)}
-  .lead{opacity:.8;margin:0 0 16px}
-  img{width:100%;max-width:420px;aspect-ratio:4/5;object-fit:cover;border-radius:16px;border:1px solid rgba(255,255,255,.08)}
-  .title{font-size:clamp(18px,3vw,26px);margin-top:10px}
-  .desc{opacity:.9;line-height:1.7;margin-top:6px;white-space:pre-wrap}
-  .muted{opacity:.6;font-size:12px;margin-top:6px}
-  .center{display:grid;justify-items:center;gap:12px}
-</style>
-<body>
-  <div class="wrap">
-    <div class="card">
-      <h1>今日の占い</h1>
-      <div id="loading" class="muted">取得中…</div>
-      <div id="view" class="center" style="display:none">
-        <img id="img" alt="占い画像">
-        <div class="title" id="title"></div>
-        <div class="desc" id="desc"></div>
-        <div class="muted" id="id"></div>
-      </div>
-      <div id="error" class="muted" style="display:none"></div>
-    </div>
-  </div>
+<script>
+  const API_BASE = "https://script.google.com/macros/s/AKfycbyS8kgXYgJPwJuo6MFSAE9b4615ylFQpqM8fS8otfP3gZxICw8To6C_h5kG-sJN_q2N/exec";
 
-  <script>
-    // ← ここをあなたのGAS /exec に置き換え
-    const API_BASE = "https://script.google.com/macros/s/AKfycbyS8kgXYgJPwJuo6MFSAE9b4615ylFQpqM8fS8otfP3gZxICw8To6C_h5kG-sJN_q2N/exec";
+  const $ = s => document.querySelector(s);
+  const loading = $('#loading'), view = $('#view'), err = $('#error');
+  const img = $('#img'), title = $('#title'), desc = $('#desc'), id = $('#id');
 
-    const $ = s => document.querySelector(s);
-    const loading = $('#loading'), view = $('#view'), err = $('#error');
-    const img = $('#img'), title = $('#title'), desc = $('#desc'), id = $('#id');
+  async function load() {
+    try {
+      const url = `${API_BASE}?_=${Date.now()}`; // キャッシュ避け
+      const res = await fetch(url, {
+        method: 'GET',
+        headers: { 'Accept': 'application/json' },
+        // mode: 'cors' はデフォルトでOK
+      });
 
-    async function load() {
+      if (!res.ok) throw new Error(`HTTP ${res.status}`);
+
+      let data;
       try {
-        const res = await fetch(`${API_BASE}/draw`, { method: 'GET' });
-        const data = await res.json();
-        if (!data.ok) throw new Error(data.error || 'unknown');
-
-        img.src = data.imageUrl;
-        title.textContent = data.name || '';
-        desc.textContent = data.result || '';
-        id.textContent = data.id ? `No. ${data.id}` : '';
-
-        loading.style.display = 'none';
-        err.style.display = 'none';
-        view.style.display = 'grid';
+        data = await res.json();
       } catch (e) {
-        loading.style.display = 'none';
-        err.textContent = '取得に失敗しました: ' + e.message;
-        err.style.display = 'block';
+        throw new Error('JSONのパースに失敗（たぶんログイン画面やHTMLが返ってる）');
       }
-    }
-    load();
-  </script>
-</body>
-</html>
 
+      if (!data.ok) throw new Error(data.error || 'unknown');
+
+      img.src = data.imageUrl;
+      title.textContent = data.name || '';
+      desc.textContent = data.result || '';
+      id.textContent = data.id ? `No. ${data.id}` : '';
+
+      loading.style.display = 'none';
+      err.style.display = 'none';
+      view.style.display = 'grid';
+    } catch (e) {
+      loading.style.display = 'none';
+      err.textContent = '取得に失敗しました: ' + e.message;
+      err.style.display = 'block';
+      console.error(e);
+    }
+  }
+  load();
+</script>
