--- a/index.html
+++ b/index.html
@@ -1,44 +1,51 @@
-<script>
-  const API_BASE = "https://script.google.com/macros/s/AKfycbyS8kgXYgJPwJuo6MFSAE9b4615ylFQpqM8fS8otfP3gZxICw8To6C_h5kG-sJN_q2N/exec";
+<!doctype html>
+<html lang="ja">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>今日の占い</title>
+</head>
+<body>
+  <div id="loading">取得中…</div>
+  <div id="view" style="display:none">
+    <img id="img">
+    <div id="title"></div>
+    <div id="desc"></div>
+    <div id="id"></div>
+  </div>
+  <div id="error" style="display:none"></div>
 
-  const $ = s => document.querySelector(s);
-  const loading = $('#loading'), view = $('#view'), err = $('#error');
-  const img = $('#img'), title = $('#title'), desc = $('#desc'), id = $('#id');
+  <script>
+    const API_BASE = "https://script.google.com/macros/s/AKfycbyS8kgXYgJPwJuo6MFSAE9b4615ylFQpqM8fS8otfP3gZxICw8To6C_h5kG-sJN_q2N/exec";
 
-  async function load() {
-    try {
-      const url = `${API_BASE}?_=${Date.now()}`; // キャッシュ避け
-      const res = await fetch(url, {
-        method: 'GET',
-        headers: { 'Accept': 'application/json' },
-        // mode: 'cors' はデフォルトでOK
-      });
+    const $ = s => document.querySelector(s);
+    const loading = $('#loading'), view = $('#view'), err = $('#error');
+    const img = $('#img'), title = $('#title'), desc = $('#desc'), id = $('#id');
 
-      if (!res.ok) throw new Error(`HTTP ${res.status}`);
-
-      let data;
+    async function load() {
       try {
-        data = await res.json();
+        const url = `${API_BASE}?_=${Date.now()}`;
+        const res = await fetch(url, { method: 'GET', headers: { 'Accept': 'application/json' } });
+        if (!res.ok) throw new Error(`HTTP ${res.status}`);
+
+        const data = await res.json();
+        if (!data.ok) throw new Error(data.error || 'unknown');
+
+        img.src = data.imageUrl;
+        title.textContent = data.name || '';
+        desc.textContent = data.result || '';
+        id.textContent = data.id ? `No. ${data.id}` : '';
+
+        loading.style.display = 'none';
+        view.style.display = 'grid';
       } catch (e) {
-        throw new Error('JSONのパースに失敗（たぶんログイン画面やHTMLが返ってる）');
+        loading.style.display = 'none';
+        err.textContent = '取得に失敗しました: ' + e.message;
+        err.style.display = 'block';
+        console.error(e);
       }
-
-      if (!data.ok) throw new Error(data.error || 'unknown');
-
-      img.src = data.imageUrl;
-      title.textContent = data.name || '';
-      desc.textContent = data.result || '';
-      id.textContent = data.id ? `No. ${data.id}` : '';
-
-      loading.style.display = 'none';
-      err.style.display = 'none';
-      view.style.display = 'grid';
-    } catch (e) {
-      loading.style.display = 'none';
-      err.textContent = '取得に失敗しました: ' + e.message;
-      err.style.display = 'block';
-      console.error(e);
     }
-  }
-  load();
-</script>
+    load();
+  </script>
+</body>
+</html>
