--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
     .header {
       text-align: center;
       margin-bottom: 15px;
-      font-size: 20px;
+      font-size: 18px;
       font-weight: bold;
       color: #2d3436;
+      line-height: 1.3;
     }
     
     #view {
@@ -48,7 +49,7 @@
       box-shadow: 0 8px 20px rgba(0,0,0,0.15);
       max-width: 400px;
       display: grid;
-      gap: 15px;
+      gap: 10px;
       margin-bottom: 20px;
     }
     
@@ -141,7 +142,10 @@
 </head>
 <body>
   <div class="guide-name hidden">🌟 道先案内人　光陽 ✨</div>
-  <div class="header hidden">🌸<span id="today-date"></span>のあなたの梵字カード占い🌸</div>
+  <div class="header hidden">
+    <div>🌸<span id="today-date"></span>🌸</div>
+    <div>🌸あなたの梵字カード占い🌸</div>
+  </div>
   
   <div id="loading">鑑定中...</div>
   
