--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   <div id="loading">
     <div class="loading-spinner"></div>
     <div>鑑定中...</div>
-    <div class="loading-dots">🔮 ✨ 🌟</div>
+    <div class="loading-dots">✨ 🌟 ✨</div>
   </div>
   
   <div id="view" style="display:none">
@@ -237,3 +237,4 @@
   </script>
 </body>
 </html>
+
